@@ -1,3 +1,4 @@
+#6 Now properly supports multiple snippet calls per page.
 Get rid of the rank (amt of points) in the default tplRow chunk.
 Add support for Russian. Thanks createit!
 
